# tmovies

./: Dockerfile  README.md  TODO.md  download.html  index.html  pyproject.toml  run.py  start.py  test_extractors.py
api/: __init__.py  caching.py  routes.py  utils.py
api/extractors/: __init__.py  boitorrent.py  maisfilmeseseries.py  models.py  nickfilmes.py  vingadorestorrent.py
css/: download.css
js/: download.js  main.js
src/: recommendator.py  routes.py  utils.py
src/api/: routes.py
src/extractors/: __init__.py  boitorrent.py  comandoto.py  maisfilmeseseries.py  nickfilmes.py
src/models/: classes.py  responses.py
web/: index.html  main.js  style.css
web/css/: base.css  main.css
web/js/: download.js  main.js
